# rust

./: README.md  requirements.txt  small_toturial.rs
.github/workflows/: rust.yml
my_rust_project/: Cargo.toml  MakeFile  Makefile
my_rust_project/src/: lib.rs  main.rs
my_rust_project/test/: test_lib.rs
translate/: Cargo.toml
translate/src/: lib.rs  main.rs
