[package]
name = "my_rust_project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# trust = {version:"0.10.2"}
# Add the name of your project here as a dependency
# my_rust_project = { path = "." }
